# dataflow-graphing

./: .gitignore  .gitmodules  README.md  generate-graph  target-file.cpp
dataflow-points/: CMakeLists.txt  print-variable-names.cpp
dataflow-track/: CMakeLists.txt
dataflow-track/lib/: graphviz
dataflow-track/lib/dataflow/: CMakeLists.txt  dataflow.cpp  dataflow.h
dataflow-track/src/: CMakeLists.txt  main.cpp
dataflow-visualize/: Makefile  do  parse.cpp
dataflow-visualize/htmlize-cpp/: generate-html-from-cpp-source.el  htmlize-cpp
dataflow-visualize/htmlize-cpp/emacs-themes/: adwaita.el  deeper-blue.el  dichromacy.el  doom-1337.el  doom-Iosvkem.el  doom-acario-dark.el  doom-acario-light.el  doom-ayu-light.el  doom-ayu-mirage.el  doom-badger.el  doom-challenger-deep.el  doom-city-lights.el  doom-dark+.el  doom-dracula.el  doom-earl-grey.el  doom-ephemeral.el  doom-fairy-floss.el  doom-flatwhite.el  doom-gruvbox-light.el  doom-gruvbox.el  doom-henna.el  doom-homage-black.el  doom-homage-white.el  doom-horizon.el  doom-ir-black.el  doom-laserwave.el  doom-manegarm.el  doom-material-dark.el  doom-material.el  doom-meltbus.el  doom-miramare.el  doom-molokai.el  doom-monokai-classic.el  doom-monokai-machine.el  doom-monokai-octagon.el  doom-monokai-pro.el  doom-monokai-ristretto.el  doom-monokai-spectrum.el  doom-moonlight.el  doom-nord-light.el  (+46 more)
dataflow-visualize/htmlize-cpp/theme-extractor/: available-themes-on-emacsclient  cpp-with-all-colors.cpp  extract-theme.cpp  generate-emacs-theme  (+2 more)
translate/: Makefile  do-your-thing  translate.cpp
